Fix remaining spacing issues, including padding

--- a/styles.css
+++ b/styles.css
@@ -34,15 +34,31 @@ body {
 
 .header-content {
     justify-content: space-between;
+    margin: 24px 0;
+}
+
+.header-link-container {
+    gap: 24px;
 }
 
 .main {
     flex: 1;
     flex-direction: column;
+    justify-content: space-between;
+}
+
+.hero-section, .tiles-section, .quote-section, .action-section,
+.action-content {
+    padding: 48px 0;
 }
 
 .hero-container {
     justify-content: space-between;
+    gap: 36px;
+}
+
+.hero-left, .hero-right {
+    flex: 1;
 }
 
 .header, .footer {
@@ -66,6 +82,7 @@ body {
 
 .tiles-title {
     text-align: center;
+    margin-bottom: 36px;
 }
 
 .tile {
@@ -96,10 +113,11 @@ body {
 }
 
 .action-left, .action-right {
-    flex: 1 1 0;
+    flex: 1 1 auto;
 }
 .action-right {
-    justify-content: center;
+    padding: 0 36px;
+    justify-content: flex-end;
     align-items: center;
 }
 
@@ -190,7 +208,5 @@ button {
 }
 
 /*
-TODO: Fix spacing everywhere
-TODO: Fix tile styling
 TODO: Fix button styling
 */
